prepare ananlysis dataset

--- a/StackOverflow_survey_2021_analysis.ipynb
+++ b/StackOverflow_survey_2021_analysis.ipynb
@@ -2528,106 +2528,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Independent contractor, freelancer, or self-employed',\n",
-       "       'Student, full-time', 'Employed full-time', 'Student, part-time',\n",
-       "       'I prefer not to say', 'Employed part-time',\n",
-       "       'Not employed, but looking for work', 'Retired',\n",
-       "       'Not employed, and not looking for work', nan], dtype=object)"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['Employment'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  62268.,      nan,   51552., ..., 4300000.,  160500.,  816816.])"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['ConvertedCompYearly'].unique()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['20 to 99 employees', nan, '100 to 499 employees',\n",
-       "       'Just me - I am a freelancer, sole proprietor, etc.',\n",
-       "       '10,000 or more employees', '10 to 19 employees',\n",
-       "       '1,000 to 4,999 employees', '500 to 999 employees',\n",
-       "       '5,000 to 9,999 employees', '2 to 9 employees', 'I don’t know'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['OrgSize'].unique()\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Developer, mobile', nan, 'Developer, front-end', ...,\n",
-       "       'Developer, mobile;Developer, front-end;Developer, full-stack;Developer, back-end;Database administrator;Developer, embedded applications or devices;System administrator;Educator',\n",
-       "       'Developer, front-end;Developer, desktop or enterprise applications;Developer, full-stack;Developer, back-end;Developer, QA or test;Developer, embedded applications or devices;Engineering manager;Educator',\n",
-       "       'Developer, mobile;Developer, desktop or enterprise applications;Data scientist or machine learning specialist;Developer, back-end;Engineering manager'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['DevType'].unique()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(83439, 7)"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sal_data = data[['ConvertedCompYearly','CompTotal','Currency','CompFreq']]"
+    "# dataset for the further analysis\n",
+    "analysis_data = data[['ResponseId',\n",
+    "                      'Age',\n",
+    "                      'Country',\n",
+    "                      'Employment',\n",
+    "                      'ConvertedCompYearly',\n",
+    "                      'OrgSize',\n",
+    "                      'DevType']]\n",
+    "analysis_data.shape"
    ]
   },
   {
@@ -2647,17 +2599,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# remove rows that Age is null\n",
+    "analysis_data = analysis_data.dropna(subset=['Age'])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(83439, 7)"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analysis_data.shape"
+   ]
   },
   {
    "cell_type": "code",
